--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,39 +10,16 @@ on:
     - cron: "0 0 * * *" # daily at midnight
 
 jobs:
-  test:
-    name: template setup test
+  plugin_test:
+    name: asdf plugin test
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Run Template Setup
-        run: |
-          git config user.name "Foo Bearer"
-          ./setup.bash \
-            "asdf-foo" \
-            "foo --helo" \
-            "asdf-community" \
-            "ASDF Community" \
-            "https://github.com/asdf-vm/asdf" \
-            "https://asdf-vm.com" \
-            "Apache-2.0" \
-            "yes"
-
-      - name: Check setup result
-        run: |
-          set -xe
-          ls -la .
-          git log
-          test ! -d template/
-          grep "Apache" LICENSE
-          test "master" = "$(git rev-parse --abbrev-ref HEAD)"
-          ! git grep -F -e "<YOUR TOOL>" \
-                   --or -e "<TOOL HOMEPAGE>" \
-                   --or -e "<TOOL REPO>" \
-                   --or -e "<TOOL CHECK>" \
-                   --or -e "<YOUR NAME>" \
-                   --or -e"<YOUR GITHUB USERNAME>"
+      - name: asdf_plugin_test
+        uses: asdf-vm/actions/plugin-test@v1.0.0
+        with:
+          command: kpt --help
+        env:
+          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
